syntax = "proto3";

option go_package = "proto/";

package proto;

import "common.proto";

service StartProcess {
  rpc Run(StartRequest) returns (StartResponse) {}
  rpc RunWithProgress(StartWithProgressRequest) returns (stream common.ProgressResponse) {}
}

message StartRequest {
  bool watch = 1;
}

message StartResponse {
}

message StartWithProgressRequest {
  string refresh_interval = 1;
}
