syntax = "proto3";

option go_package = "proto/";

package proto;

service StopProcess {
  rpc Run(StopRequest) returns (StopResponse) {}
}

message StopRequest {
}

message StopResponse {
}

